[gd_scene load_steps=4 format=3 uid="uid://0et17ymvvg1y"]

[ext_resource type="FontFile" uid="uid://bnlkwk86tx4w1" path="res://font/Bruce Forever.ttf" id="1_bub5b"]
[ext_resource type="Script" uid="uid://dr8qnj1l048la" path="res://script/qte_popup.gd" id="1_jpg2l"]
[ext_resource type="AudioStream" uid="uid://wtw4532yv88q" path="res://Sound/heart-beat-sound-effect.mp3" id="3_ruy7r"]

[node name="QTEPopup" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jpg2l")

[node name="QuestionLabel" type="Label" parent="."]
offset_left = 57.0
offset_top = 39.0
offset_right = 184.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("1_bub5b")
theme_override_font_sizes/font_size = 20
text = "____ สังหาร"

[node name="OptionContainer" type="HBoxContainer" parent="."]
offset_left = 100.0
offset_top = 70.0
offset_right = 140.0
offset_bottom = 110.0

[node name="Button1" type="Button" parent="OptionContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bub5b")
theme_override_font_sizes/font_size = 20

[node name="Button2" type="Button" parent="OptionContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bub5b")
theme_override_font_sizes/font_size = 20

[node name="Button3" type="Button" parent="OptionContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bub5b")
theme_override_font_sizes/font_size = 20

[node name="TimerLabel" type="Label" parent="."]
offset_left = 6.0
offset_top = 8.0
offset_right = 239.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_bub5b")
theme_override_font_sizes/font_size = 20
text = "Time Left : 10.0 "

[node name="WarningSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ruy7r")
volume_db = 5.0

[node name="FailedSound" type="AudioStreamPlayer2D" parent="."]
